完善infinite-scroll，调整后台页面

--- a/workFaceSurvey/WebRoot/html-michael/management.html
+++ b/workFaceSurvey/WebRoot/html-michael/management.html
@@ -48,188 +48,7 @@
     </div>
   </form>
 
-  <div class="row" id="resultList">
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar2.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar2.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4">
-      <div class="thumbnail">
-        <a href="#">
-          <div class="thumbnail-img" style="background-image: url('images/avatar1.png')"></div>
-          <div class="caption">
-            <h3>汤力丞</h3>
-            <p>18601646631</p>
-            <p class="text-overflow">某公司</p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
+  <div class="row" id="resultList"></div>
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -240,27 +59,30 @@
 <script src="js/infinite-scroll.js"></script>
 
 <script>
-  initialList($("#resultList"), "sample-result.json", {q: "汤"}, function(data) {
-    var items = [];
-    $.each(data, function(i, val) {
-      items.push(
-          "<div class=\"col-xs-12 col-sm-6 col-lg-4\">" +
-          "<div class=\"thumbnail\">" +
-          "<a href=\"" + val.uri + "\">" +
-          "<div class=\"thumbnail-img\" style=\"background-image: url('" + val.avatar + "')\"></div>" +
-          "<div class=\"caption\">" +
-          "<h3>" + val.fullName + "</h3>" +
-          "<p>" + val.mobile + "</p>" +
-          "<p class=\"text-overflow\">" + val.company + "</p>" +
-          "</div>" +
-          "</a>" +
-          "</div>" +
-          "</div>"
-      );
-    });
+  $("form").submit(function(e) {
+    initialList($("#resultList"), "survey/userInfo", {q: $("form input").val()}, function(data) {
+      var items = [];
+      $.each(data, function(i, val) {
+        items.push(
+            "<div class=\"col-xs-12 col-sm-6 col-lg-4\">" +
+            "<div class=\"thumbnail\">" +
+            "<a href=\"" + val.uri + "\">" +
+            "<div class=\"thumbnail-img\" style=\"background-image: url('" + (val.avatar || "images/avatar.png") + "')\"></div>" +
+            "<div class=\"caption\">" +
+            "<h3>" + (val.fullName || "N/A") + "</h3>" +
+            "<p>" + val.mobile + "</p>" +
+            "<p class=\"text-overflow\">" + (val.company || "N/A") + "</p>" +
+            "</div>" +
+            "</a>" +
+            "</div>" +
+            "</div>"
+        );
+      });
 
-    $("#resultList").html(items.join(""));
-  });
+      $("#resultList").append(items.join(""));
+    });
+    e.preventDefault();
+  }).submit();
 </script>
 </body>
 </html>
