--- a/workFaceSurvey/WebRoot/html-michael/obj-items.html
+++ b/workFaceSurvey/WebRoot/html-michael/obj-items.html
@@ -522,5 +522,11 @@
 <script src="js/bootstrap.min.js"></script>
 
 <script src="js/bootstrap-tagsinput.min.js"></script>
+
+<script>
+  $("input[data-role=tagsinput]").tagsinput({
+    confirmKeys: [13, 44, 32]
+  });
+</script>
 </body>
 </html>
