--- a/workFaceSurvey/WebRoot/html-michael/sub-items.html
+++ b/workFaceSurvey/WebRoot/html-michael/sub-items.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>【创业上海万人田野调查】- 访谈问卷</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
 
   <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
+  <link href="css/bootstrap-wizard.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/question-items.css" rel="stylesheet">
 
@@ -22,15 +24,59 @@
   <![endif]-->
 </head>
 <body>
+
+<div class="page-header">
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-offset-1 col-md-11">
+        <h1>创业上海万人田野调查 <small>WorkFace | 创业者理解创业者</small></h1>
+        <p>创业者理解创业者，是创业者万人大联结的第一步。</p>
+        <p>这是一场社会化的田野调查。我们的访谈团队会与你联系，倾听你的创业故事并分享传播给有相互需要的人，相互理解的人。</p>
+        <p>创业事关我们大家的命运，我们不置身事外。创业上海，我们和你在一起！</p>
+
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
+<!--
   <div class="page-header">
-    <h1>创业上海万人田野调查 - 访谈问卷 <small>WorkFace | 创业者理解创业者</small></h1>
-    <p>谢谢你，与我们一起。</p>
+    <h1>创业上海万人田野调查初步信息表 <small>WorkFace | 创业者理解创业者</small></h1>
+    <p>创业者理解创业者，是创业者万人大联结的第一步。</p>
+    <p>这是一场社会化的田野调查。我们的访谈团队会与你联系，倾听你的创业故事并分享传播给有相互需要的人，相互理解的人。</p>
+    <p>创业事关我们大家的命运，我们不置身事外。创业上海，我们和你在一起！</p>
+  </div>
+-->
+
+  <div class="row bs-wizard">
+
+    <div class="col-xs-4 bs-wizard-step complete">
+      <div class="text-center bs-wizard-stepnum">步骤 1</div>
+      <div class="progress"><div class="progress-bar"></div></div>
+      <a href="javascript:void(0)" class="bs-wizard-dot"></a>
+      <div class="bs-wizard-info text-center">基本信息表</div>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step complete"><!-- complete -->
+      <div class="text-center bs-wizard-stepnum">步骤 2</div>
+      <div class="progress"><div class="progress-bar"></div></div>
+      <a href="javascript:void(0)" class="bs-wizard-dot"></a>
+      <div class="bs-wizard-info text-center">详细信息表</div>
+    </div>
+
+    <div class="col-xs-4 bs-wizard-step active"><!-- complete -->
+      <div class="text-center bs-wizard-stepnum">步骤 3</div>
+      <div class="progress"><div class="progress-bar"></div></div>
+      <a href="javascript:void(0)" class="bs-wizard-dot"></a>
+      <div class="bs-wizard-info text-center">访谈问卷（选填）</div>
+    </div>
   </div>
 
   <form>
     <div class="row">
-      <div class="col-md-8 col-md-offset-1">
+      <div class="col-md-8 col-md-offset-2">
         <div class="form-group">
           <label for="inputQ21" class="control-label">为什么在上海创业？对上海创业环境的观察体验，热爱和吐槽是？</label>
           <span id="q21Help" class="help-block">关于上海的创业环境</span>
@@ -46,6 +92,11 @@
           <label for="inputQ23" class="control-label">目前的创业是怎样产生的，发心是什么？</label>
           <span id="q23Help" class="help-block">关于创业的驱动力和发心</span>
           <textarea class="form-control" id="inputQ23" rows="5" aria-describedby="q23Help"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="" class="control-label">你是如何赚到人生第一桶金的？</label>
+          <textarea class="form-control" id="" rows="5"></textarea>
         </div>
 
         <div class="form-group">
@@ -70,8 +121,23 @@
         </div>
 
         <div class="form-group">
+          <label for="" class="control-label">如果请你给其他的创业者一个忠告，会对他们说什么呢？</label>
+          <textarea class="form-control" id="" rows="5"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="" class="control-label">对您目前所在办公地区园区/孵化器有什么建议吗？</label>
+          <textarea class="form-control" id="" rows="5"></textarea>
+        </div>
+
+        <div class="form-group">
           <label for="inputQ28" class="control-label">目前创业需要什么帮助？对万人大联结有什么期待？</label>
           <textarea class="form-control" id="inputQ28" rows="5"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="" class="control-label">你对WF这个平台有什么意见/建议吗？</label>
+          <textarea class="form-control" id="" rows="5"></textarea>
         </div>
 
         <div class="form-group">
@@ -84,7 +150,7 @@
     <hr>
 
     <div class="row">
-      <div class="col-md-11 col-md-offset-1">
+      <div class="col-md-10 col-md-offset-2">
         <div class="form-group">
           <button type="submit" class="btn btn-primary btn-lg">完成</button>
         </div>
