--- a/workFaceSurvey/WebRoot/html-michael/management.html
+++ b/workFaceSurvey/WebRoot/html-michael/management.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>【创业上海万人田野调查】- 调查汇总</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +42,7 @@
           <input type="text" class="form-control" placeholder="姓名/公司&hellip;">
         <span class="input-group-btn">
           <!--<button type="button" class="btn btn-default">找活动</button>-->
-          <button type="button" class="btn btn-default">查询</button>
+          <button type="submit" class="btn btn-default">查询</button>
         </span>
         </div><!-- /.input-group -->
       </div>
