--- a/workFaceSurvey/WebRoot/html-michael/management.html
+++ b/workFaceSurvey/WebRoot/html-michael/management.html
@@ -25,6 +25,34 @@
   <![endif]-->
 
   <script src="js/underscore-min.js"></script>
+
+  <style type="text/css">
+    .thumbnail-img {
+      float: left;
+      width: 122px;
+      height: 122px;
+      margin: 0;
+      padding: 0;
+      background-size: cover;
+      background-position: 50% 50%;
+    }
+
+    .thumbnail .caption {
+      margin-left: 134px;
+    }
+
+    .thumbnail h3 {
+      margin: 8px 0 10px 0;
+    }
+
+    .thumbnail:hover {
+      background-color: #eee;
+    }
+
+    .thumbnail > a:hover {
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
