调整邮箱位置

--- a/workFaceSurvey/WebRoot/html-michael/obj-items.html
+++ b/workFaceSurvey/WebRoot/html-michael/obj-items.html
@@ -103,6 +103,14 @@
     </div>
 
     <div class="form-group">
+      <label for="inputQ16" class="col-md-2 control-label">邮箱</label>
+      <div class="col-md-4">
+        <input type="text" name="q16" class="form-control" id="inputQ16">
+      </div>
+    </div>
+
+
+    <div class="form-group">
       <label for="inputQ3" class="col-md-2 control-label">公司</label>
       <div class="col-md-8">
         <input type="text" name="q3" class="form-control" id="inputQ3">
@@ -393,7 +401,7 @@
           </div>
           <div class="radio col-sm-4">
             <label>
-              <input type="radio" name="q11" value="6"> 美食、餐饮、F&B
+              <input type="radio" name="q11" value="6"> 美食、餐饮、F&amp;B
             </label>
           </div>
         </div>
@@ -528,20 +536,6 @@
             </label>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="inputQ15" class="col-md-2 control-label">微信</label>
-      <div class="col-md-4">
-        <input type="text" name="q15" class="form-control" id="inputQ15">
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label for="inputQ16" class="col-md-2 control-label">邮箱</label>
-      <div class="col-md-4">
-        <input type="text" name="q16" class="form-control" id="inputQ16">
       </div>
     </div>
 
